--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,19 @@
 {
-    "liveServer.settings.port": 5501
+  "webhint.enableTelemetry": "enabled",
+  "liveSassCompile.settings.autoprefix": [],
+  "liveSassCompile.settings.formats": [
+    {
+      "format": "expanded",
+      "extensionName": ".css",
+      "savePath": "./css"
+    }
+  ],
+  "files.autoSave": "off",
+  "editor.formatOnSave": true,
+  "workbench.iconTheme": "material-icon-theme",
+  "prettier.singleQuote": false,
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "liveServer.settings.port": 5501
 }
